deploy/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ${_APP_NAME}-svc
  labels:
    name: ${_APP_NAME}
spec:
  type: NodePort
  selector:
    app: ${_APP_NAME}
  ports:
    - port: 80
...
